[project]
name = "acme-ca-server"
description = "ACME CA Server"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["dependencies"]
requires-python = ">=3.10"
classifiers = [
 "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/knrdl/acme-ca-server"
Documentation = "https://github.com/knrdl/acme-ca-server"
Repository = "https://github.com/knrdl/acme-ca-server.git"
Issues = "https://github.com/knrdl/acme-ca-server/issues"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.pylint]
max-line-length = 179
recursive = 'yes'
disable = 'too-many-branches,no-else-return,broad-exception-caught,missing-module-docstring,missing-class-docstring,missing-function-docstring'

[tool.pytest.ini_options]
pythonpath = "app"
testpaths = [
    "tests/pytest/",
]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
line-length = 179

[tool.ruff.format]
quote-style = "single"